AG-2728 - fixed popup editors with wrong padding

--- a/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
+++ b/packages/ag-grid-community/src/styles/ag-theme-base/sass/_ag-theme-base.scss
@@ -957,7 +957,7 @@
 
     .ag-popup-editor {
         z-index: 1;
-
+        padding: 0;
         .ag-large-textarea textarea {
             @include textbox($params);
 
